Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
None
-
0.4.15-dev-178-gd635ce0 https://git.reactos.org/?p=reactos.git;a=commit;h=d635ce0cc0336a9b77d243ddce946876f48ec4f6
Description
Observed result
0.4.15-dev-1679-g511134e_affected_Sunrise_in_sysdmCpl.webm
Expected result
ReactOS-0.4.7-release-85-g848570f_ProveThatTheSunRiseEffectIsA_REGRESSION.webm
The regression was introduced by 0.4.15-dev-178-gd635ce0
(then I "fixed" it by removing the broken code altogether in 0.4.15-dev-1630-gbe25187)
(and then Colin Finck accidently reintroduced it by 0.4.15-dev-1673-gc1356e8)
so I hereby propose a fix for that regression anti_sunrise_regression.patch