[SYSDM] Fix sunrise regression CORE-17451

This fixes a regression with the AlphaBlending on single left-click
on the ros logo in general tab.
That regression was introduced by
0.4.15-dev-178-g d635ce0cc0336a9b77d243ddce946876f48ec4f6

So it can be seen as an addendum to (#2707).

We luckily did not have any affected releases yet.